--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "NodeNext",
-    "target": "ES2020"
+    "target": "ES2020",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
